--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "sandfox-im/juick-xp",
-    "description": "A WordPress Plugin to crosspost your messages to Juick.com",
-    "keywords": ["WordPress", "Juick"],
+    "name": "skobkin/point-xp",
+    "description": "A WordPress Plugin to crosspost your messages to Point.im",
+    "keywords": ["WordPress", "Point.im"],
     "type": "wordpress-plugin",
-    "homepage": "https://github.com/sandfox-im/juick-xp",
+    "homepage": "https://github.com/skobkin/point-xp",
     "require": {
         "sandfox-im/xmpp-enabled": "~1.0",
         "composer/installers": "~1.0"
@@ -13,6 +13,10 @@
         {
             "name": "Anton Smirnov",
             "email": "sandfox@sandfox.im"
+        },
+        {
+            "name": "Alexey Skobkin",
+            "email": "skobkin-ru@ya.ru"
         }
     ],
     "support": {
